# AutoHotkey.py

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AutoHotkey.py  CHANGES.md  EmbedPython.ahk  EmbedPython.bat  LICENSE.md  MANIFEST.in  Pipfile  Python.ahk  Python.ahk.bat  README.md  ahk.py  call_bench.ahk  call_bench.py  embed.c  playground.py  pyproject.toml  setup.cfg  setup.py  test_ahk.py  test_embed.py  tox.ini
Lib/: Commands.ahk  PythonDll.ahk  StdoutToVar_CreateProcess.ahk
Tests/: conftest.py  test_api.py  test_cli.py
ahk/: Python.ahk  __init__.py  api.py  exceptions.py  flow.py  gui.py  keys.py  main.py  window.py
ahkpy/: Python.ahk  __init__.py  __main__.py  block_input.py  clipboard.py  colors.py  converters.py  exceptions.py  flow.py  gui.py  hotkey.py  hotkey_context.py  hotkeys.py  hotstring.py  hotstrings.py  key_state.py  keys.py  launcher.py  main.py  menu.py  message_box.py  mouse.py  remap.py  remap_key.py  sending.py  settings.py  timer.py  tooltip.py  window.py  window_message.py
ahkpy/Lib/: Commands.ahk  PythonDll.ahk
docs/: advanced.rst  api.rst  appendix.rst  conf.py  index.rst  install.rst  quickstart.rst
docs/_static/: custom.css
examples/: LICENSE.md  compose_key.py  kde_move.py  onenote_ctx.py  remap_ctrl_arrow.py  remote_send.py  restart_app_hotkey.py  set_keyboard_layout.py  switch_between_app_windows.py  window_group.py  window_management.py
lib/: API.ahk
requirements/: dev.in  dev.txt  docs.txt  tests-min.txt  tests.in  tests.txt
src/ahkpy/: Python.ahk  __init__.py  exceptions.py  hotkey.py  hotstring.py  launcher.py  main.py  menu.py  message_box.py  mouse.py  remap_key.py  sending.py  settings.py  tooltip.py  unset.py  window.py
tests/: conftest.py  test_block_input.py  test_builtin.py  test_cli.py  test_clipboard.py  test_flow.py  test_gui.py  test_hotkey.py  test_hotkey_context.py  test_hotstring.py  test_key_state.py  test_keys.py  test_menu.py  test_message_box.py  test_mouse.py  test_remap_key.py  test_sending.py  test_timer.py  test_tooltip.py  test_window.py  test_window_message.py
