[project]
name = "AutoHotkey.py"
dynamic = ["version"]
description = "Write AutoHotkey scripts in Python"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">= 3.8"
authors = [{name = "Sviatoslav Abakumov", email = "dust.harvesting@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Documentation = "https://ahkpy.readthedocs.io/en/latest/"
Changelog = "https://github.com/Perlence/AutoHotkey.py/blob/master/CHANGES.md"
"Source Code" = "https://github.com/Perlence/AutoHotkey.py"
"Issue Tracker" = "https://github.com/Perlence/AutoHotkey.py/issues"

[project.scripts]
ahkpy = "ahkpy.launcher:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "ahkpy.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-vv"]
