[metadata]
name = Python.ahk
url = https://github.com/Perlence/Python.ahk
project_urls =
    # Documentation = https://pythonahk.readthedocs.io/en/latest/
    Code = https://github.com/Perlence/Python.ahk
    Issue tracker = https://github.com/Perlence/Python.ahk/issues
license = BSD-3-Clause
author = Sviatoslav Abakumov
author_email = dust.harvesting@gmail.com
description = Embed Python into AutoHotkey.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = Windows
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
# FIXME: ahk namespace is already used by 'ahk' and 'pyahk' packages.
packages = ahk
include_package_data = true
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    ahk = ahk.__main__:main

[flake8]
max-line-length = 120

[tool:pytest]
addopts = -s
