[metadata]
name = AutoHotkey.py
url = https://github.com/Perlence/AutoHotkey.py
project_urls =
    # Documentation = https://autohotkeypy.readthedocs.io/en/latest/
    Code = https://github.com/Perlence/AutoHotkey.py
    Issue tracker = https://github.com/Perlence/AutoHotkey.py/issues
license = BSD-3-Clause
author = Sviatoslav Abakumov
author_email = dust.harvesting@gmail.com
description = Embed Python into AutoHotkey.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = Windows
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = ahkpy
include_package_data = true
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    ahkpy = ahkpy.launcher:main

[flake8]
max-line-length = 120

[tool:pytest]
addopts = -s -vv
